# SELFBOT

./: main.py  package-lock.json  pyproject.toml  replit.nix
cogs/: AFK.py  Cloner.py  Music.py  Profile.py  Spy.py
